Make scroll syncing smoother; fix editor scrollbar

--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -39,7 +39,7 @@ body {
   flex-grow: 1;
   
   .CodeMirror {
-    height: 100vh!important;
+    height: 100%;
   }
 }
 
